@@ -46,6 +46,7 @@ IGNORED_ARGUMENT_NAMES = re.compile("_.*|^ignored_|^unused_")
 # by astroid. Unfortunately this also messes up our explicit checks
 # for `abc`
 METACLASS_NAME_TRANSFORMS = {"_py_abc": "abc"}
+BUILTIN_ENUMERATE = "builtins.enumerate"
 BUILTIN_RANGE = "builtins.range"
 TYPING_MODULE = "typing"
 TYPING_NAMES = frozenset(
@@ -2220,6 +2221,13 @@ class VariablesChecker(BaseChecker):
         # For functions we can do more by inferring the length of the itered object
         try:
             inferred = next(assign.iter.infer())
+            # Prefer the target of enumerate() rather than the enumerate object itself
+            if (
+                isinstance(inferred, astroid.Instance)
+                and inferred.qname() == BUILTIN_ENUMERATE
+                and assign.iter.args
+            ):
+                inferred = next(assign.iter.args[0].infer())
         except astroid.InferenceError:
             self.add_message("undefined-loop-variable", args=node.name, node=node)
         else:
